--- a/.github/workflows/gha-basic-test.yml
+++ b/.github/workflows/gha-basic-test.yml
@@ -7,10 +7,14 @@ jobs:
         runs-on: ubuntu-latest
 
         steps:
-            - uses: actions/checkout@v4
-            - uses: actions/setup-python@v5
+            - name: Set Up
+              uses: actions/checkout@v4
+
+            - name: Set Up Python
+              uses: actions/setup-python@v5
               with:
                    python-version: '3.10' 
-            -   run: python hello.py
+            - name: Runner
+              run: python hello.py
 
             
